object/output.txt
complex03.cpp: In function ‘void test()’:
complex03.cpp:43:21: error: expected ‘;’ before ‘std’
   43 |   myStaticCheckVar++
      |                     ^
      |                     ;
   44 |   std::cout << myStaticCheckVar << std::endl;
      |   ~~~                
object$ 
